syntax = "proto3";

option go_package = "hotel-booking-system/internal/pkg/delivery/grpc/payment-service/proto";

package proto;

import "internal/pkg/delivery/grpc/commonProto/common.proto";

service PaymentService {
  rpc GetToken (common.Credentials) returns (common.Token) {}

  rpc CreatePayment (CreatePaymentRequest) returns (common.UUID) {}
  rpc GetPayment (common.UUID) returns (Payment) {}
}

message Price {
}

message CreatePaymentRequest {
  common.UUID UserUuid = 1;
  int64 Value = 2;
}

message Payment {
  common.UUID PaymentUuid = 1;
  common.UUID UserUuid = 2;
  string Status = 3;
  int64 Price = 4;
  int64 TimeUpdated = 5;
}